ServiceUpdate, LectureSessionRepository added