@@ -2,7 +2,11 @@ package com.example.lecturescheduler;
 
 import com.example.lecturescheduler.exception.ResourceNotFoundException;
 import com.example.lecturescheduler.model.Instructor;
+import com.example.lecturescheduler.model.SingleGroup;
+import com.example.lecturescheduler.model.Subject;
+import com.example.lecturescheduler.repository.GroupRepository;
 import com.example.lecturescheduler.repository.InstructorRepository;
+import com.example.lecturescheduler.repository.SubjectRepository;
 import com.example.lecturescheduler.service.InstructorService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,14 +17,21 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.*;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-/*
+
 class InstructorServiceTest {
 
     @Mock
     private InstructorRepository instructorRepository;
+
+    @Mock
+    private SubjectRepository subjectRepository;
+
+    @Mock
+    private GroupRepository groupRepository;
 
     @InjectMocks
     private InstructorService instructorService;
@@ -33,8 +44,8 @@ class InstructorServiceTest {
     @Test
     void findAllInstructors_ShouldReturnAllInstructors() {
         when(instructorRepository.findAll()).thenReturn(Arrays.asList(
-                new Instructor("John Doe", "Mathematics", Arrays.asList("Algebra", "Calculus"), "Available", "Mornings"),
-                new Instructor("Jane Smith", "Physics", Arrays.asList("Mechanics", "Quantum Physics"), "Available", "Afternoons")
+                new Instructor("John Doe", "Mathematics", null, Arrays.asList(true, false, true), Arrays.asList(false, true, true), null),
+                new Instructor("Jane Smith", "Physics", null, Arrays.asList(false, true, false), Arrays.asList(true, false, true), null)
         ));
 
         List<Instructor> result = instructorService.findAllInstructors();
@@ -47,7 +58,7 @@ class InstructorServiceTest {
 
     @Test
     void saveInstructor_ShouldReturnSavedInstructor() {
-        Instructor instructor = new Instructor("Mark Spencer", "Chemistry", List.of("Organic Chemistry"), "Available", "Evenings");
+        Instructor instructor = new Instructor("Mark Spencer", "Chemistry", null, Arrays.asList(true), Arrays.asList(false), null);
         when(instructorRepository.save(any(Instructor.class))).thenReturn(instructor);
 
         Instructor savedInstructor = instructorService.saveInstructor(instructor);
@@ -60,7 +71,7 @@ class InstructorServiceTest {
     @Test
     void updateInstructor_WhenNotFound_ShouldThrowException() {
         Long instructorId = 1L;
-        Instructor instructorDetails = new Instructor("Updated Name", "Updated Department", List.of("Updated Subject"), "Available", "No preference");
+        Instructor instructorDetails = new Instructor("Updated Name", "Updated Department", null, Arrays.asList(false, true), Arrays.asList(true, false), null);
         when(instructorRepository.findById(instructorId)).thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> instructorService.updateInstructor(instructorId, instructorDetails))
@@ -73,7 +84,7 @@ class InstructorServiceTest {
     @Test
     void deleteInstructor_ShouldDeleteInstructor() {
         Long instructorId = 2L;
-        Instructor instructor = new Instructor("Emily Watson", "Biology", List.of("Genetics"), "Unavailable", "No preference");
+        Instructor instructor = new Instructor("Emily Watson", "Biology", null, Arrays.asList(true, false), Arrays.asList(false, true), null);
         when(instructorRepository.findById(instructorId)).thenReturn(Optional.of(instructor));
         doNothing().when(instructorRepository).delete(instructor);
 
@@ -82,5 +93,82 @@ class InstructorServiceTest {
         verify(instructorRepository).delete(instructor);
     }
 
+    @Test
+    void addSubjectTaught_ShouldAddSubjectToInstructor() {
+        Long instructorId = 1L;
+        Long subjectId = 1L;
+        Instructor instructor = new Instructor();
+        instructor.setId(instructorId);
+        instructor.setSubjectsTaught(new ArrayList<>());
+        Subject subject = new Subject();
+        subject.setId(subjectId);
+
+        when(instructorRepository.findById(instructorId)).thenReturn(Optional.of(instructor));
+        when(subjectRepository.findById(subjectId)).thenReturn(Optional.of(subject));
+        when(instructorRepository.save(any(Instructor.class))).thenReturn(instructor);
+
+        Instructor updatedInstructor = instructorService.addSubjectTaught(instructorId, subjectId);
+
+        assertThat(updatedInstructor.getSubjectsTaught()).contains(subject);
+        verify(instructorRepository).save(instructor);
+    }
+
+    @Test
+    void removeSubjectTaught_ShouldRemoveSubjectFromInstructor() {
+        Long instructorId = 1L;
+        Long subjectId = 1L;
+        Instructor instructor = new Instructor();
+        instructor.setId(instructorId);
+        Subject subject = new Subject();
+        subject.setId(subjectId);
+        instructor.setSubjectsTaught(new ArrayList<>(List.of(subject)));
+
+        when(instructorRepository.findById(instructorId)).thenReturn(Optional.of(instructor));
+        when(instructorRepository.save(any(Instructor.class))).thenReturn(instructor);
+
+        Instructor updatedInstructor = instructorService.removeSubjectTaught(instructorId, subjectId);
+
+        assertThat(updatedInstructor.getSubjectsTaught()).doesNotContain(subject);
+        verify(instructorRepository).save(instructor);
+    }
+
+    @Test
+    void addGroup_ShouldAddGroupToInstructor() {
+        Long instructorId = 1L;
+        Long groupId = 1L;
+        Instructor instructor = new Instructor();
+        instructor.setId(instructorId);
+        instructor.setGroups(new ArrayList<>());
+        SingleGroup group = new SingleGroup();
+        group.setId(groupId);
+
+        when(instructorRepository.findById(instructorId)).thenReturn(Optional.of(instructor));
+        when(groupRepository.findById(groupId)).thenReturn(Optional.of(group));
+        when(instructorRepository.save(any(Instructor.class))).thenReturn(instructor);
+
+        Instructor updatedInstructor = instructorService.addGroup(instructorId, groupId);
+
+        assertThat(updatedInstructor.getGroups()).contains(group);
+        verify(instructorRepository).save(instructor);
+    }
+
+    @Test
+    void removeGroup_ShouldRemoveGroupFromInstructor() {
+        Long instructorId = 1L;
+        Long groupId = 1L;
+        Instructor instructor = new Instructor();
+        instructor.setId(instructorId);
+        SingleGroup group = new SingleGroup();
+        group.setId(groupId);
+        instructor.setGroups(new ArrayList<>(List.of(group)));
+
+        when(instructorRepository.findById(instructorId)).thenReturn(Optional.of(instructor));
+        when(instructorRepository.save(any(Instructor.class))).thenReturn(instructor);
+
+        Instructor updatedInstructor = instructorService.removeGroup(instructorId, groupId);
+
+        assertThat(updatedInstructor.getGroups()).doesNotContain(group);
+        verify(instructorRepository).save(instructor);
+    }
+
 }
-*/
